Some code enhancement
Signed-off-by: clinique <gael@lhopital.org>